# Infotecs

./: CMakeLists.txt  README.md
Program1_Server/: CMakeLists.txt
Program1_Server/sources/: .bufferprocessor.cpp.swp  bufferprocessor.cpp  bufferprocessor.h  inputhandler.cpp  inputhandler.h  main.cpp  safebuffer.h  server.cpp  server.h
Program2_Client/: CMakeLists.txt
Program2_Client/sources/: client.cpp  receivehandler.cpp
